# dailytreasuryrates

./: .gitignore  LICENSE  README.md  make_release.sh  pyproject.toml
.github/workflows/: workflow.yml
src/: cache.csv  dailytreasuryrates-cache.csv  dailytreasuryrates.py
