[tool.poetry]
name = "dailytreasuryrates"
version = "0.1.0"
description = "Daily Treasury Rates Downloader"
authors = ["Thijs van den Berg <thijs@sitmo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.1.0"
pandas = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dailytreasuryrates = "dailytreasuryrates:cli"