[tool.poetry]
name = "dailytreasuryrates"
version = "0.4.3"
description = "Daily Treasury Rates Downloader"
authors = ["Thijs van den Berg <thijs@sitmo.com>"]
license = "MIT"
readme = "README.md"
include = ["src/dailytreasuryrates-cache.csv"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.1.0"
pandas = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dailytreasuryrates = "dailytreasuryrates:cli"
